kubernetes/apps/n8n/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
  labels:
    app: n8n
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 5678
    targetPort: http
    protocol: TCP
  selector:
    app: n8n
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
