kubernetes/apps/n8n/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: n8n
  labels:
    app: n8n
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`n8n.nihalxkumar.dev`)
      kind: Rule
      middlewares:
        - name: tailscale-only
          namespace: traefik
      services:
        - name: n8n
          port: 5678
  tls:
    secretName: nihalxkumar-dev-tls
